✨ 1~10까지 count 1씩 증가 후 fadeout

--- a/Javascript/20230718setTimeout setInterval/index.html
+++ b/Javascript/20230718setTimeout setInterval/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="setTimeout, setInterval">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script> 
   <!-- <title>1초마다 랜덤으로 배경색 바꾸기</title> -->
   <title>숫자 카운트하면서 랜덤 배경색 변경</title>
   <link rel="stylesheet" href="./style.css">
@@ -14,7 +16,7 @@
   <div class="wrapper">
     <!-- <p class="count">1초마다 배경색 바꾸기</p> -->
     <p class="count">
-      <span class="num">5</span>
+      <span class="num">1</span>
       초마다 배경색 바꾸기
     </p>
   </div>
