--- a/Javascript/20230719_Javascript_복합연산자/index.html
+++ b/Javascript/20230719_Javascript_복합연산자/index.html
@@ -13,7 +13,7 @@
     // 1. 산술 연산자 : + - / (나누기) * (곱하기) % (나머지값) ** (거듭제곱) -->
     // console.log(30 % 10);
 
-    // 2. 대입 연산자 : = += -=
+    // 2. 대입 연산자 : =
     let str1 = 'Hello';
     let str2 = 'World!';
     // 문자열은 더하기가 가능하다.
