--- a/20230719_img_modal/index.html
+++ b/20230719_img_modal/index.html
@@ -6,12 +6,34 @@
   <meta name="description" content="modal">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
   <title>img modal</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    <ul class="modal-list">
+      <li class="modal-item"><div>모달열기</div></li>
+      <li class="modal-item"><img src="./images/img1.jpg" alt=""></li>
+      <li class="modal-item"><img src="./images/img2.jpg" alt=""></li>
+      <li class="modal-item"><img src="./images/img3.jpg" alt=""></li>
+      <li class="modal-item"><img src="./images/img4.jpg" alt=""></li>
+      <li class="modal-item"><img src="./images/img5.jpg" alt=""></li>
+    </ul>
+    
+    <div class="modal-popup">
+      <div class="modal-top">
+        <span>모달 타이틀</span>
+        <div class="modal-btn">X</div>
+      </div>
+      <div class="modal-popup-img"><img src="./images/img6.jpg" alt=""></div>
+      <div class="modal-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto dolores sunt optio nostrum itaque quisquam minima odit blanditiis, excepturi esse? At enim dignissimos reprehenderit tenetur obcaecati necessitatibus natus nemo.</div>
+    </div>
+  
+    <div class="modal-overay"></div>
   </div>
   <script src="./JS/script.js"></script>
 </body>
