--- a/20230719_img_modal/index.html
+++ b/20230719_img_modal/index.html
@@ -17,13 +17,13 @@
   <div class="wrapper">
     <ul class="modal-list">
       <li class="modal-item"><div>모달열기</div></li>
-      <li class="modal-item"><img src="./images/img1.jpg" alt=""></li>
-      <li class="modal-item"><img src="./images/img2.jpg" alt=""></li>
-      <li class="modal-item"><img src="./images/img3.jpg" alt=""></li>
-      <li class="modal-item"><img src="./images/img4.jpg" alt=""></li>
-      <li class="modal-item"><img src="./images/img5.jpg" alt=""></li>
+      <li class="modal-item"><img id="img1" src="./images/img1.jpg" alt=""></li>
+      <li class="modal-item"><img id="img2" src="./images/img2.jpg" alt=""></li>
+      <li class="modal-item"><img id="img3" src="./images/img3.jpg" alt=""></li>
+      <li class="modal-item"><img id="img4" src="./images/img4.jpg" alt=""></li>
+      <li class="modal-item"><img id="img5" src="./images/img5.jpg" alt=""></li>
     </ul>
-    
+
     <div class="modal-popup">
       <div class="modal-top">
         <span>모달 타이틀</span>
@@ -31,6 +31,11 @@
       </div>
       <div class="modal-popup-img"><img src="./images/img6.jpg" alt=""></div>
       <div class="modal-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto dolores sunt optio nostrum itaque quisquam minima odit blanditiis, excepturi esse? At enim dignissimos reprehenderit tenetur obcaecati necessitatibus natus nemo.</div>
+    </div>
+
+    <div class="modal-img-popup">
+      <div class="modal-btn2">X</div>
+      <img id="img0" src="" alt="">
     </div>
   
     <div class="modal-overay"></div>
