✨ 버튼 클릭시 팝업창 띄우는 기능 구현

--- a/20230719_img_modal/index.html
+++ b/20230719_img_modal/index.html
@@ -29,14 +29,16 @@
         <p>모달 타이틀</p>
         <button class="modal-close close-btn" type="button">X</button>
       </div>
-      <div class="modal-sec"><img src="./images/img6.jpg" alt="리트리버"></div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto dolores sunt optio nostrum itaque quisquam minima odit blanditiis, excepturi esse? At enim dignissimos reprehenderit tenetur obcaecati necessitatibus natus nemo.</p>
+      <div class="modal-sec">
+        <img src="./images/img6.jpg" alt="리트리버">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto dolores sunt optio nostrum itaque quisquam minima odit blanditiis, excepturi esse? At enim dignissimos reprehenderit tenetur obcaecati necessitatibus natus nemo.</p>
+      </div>
     </div>
 
     <div class="img-modal-box modal">
       <button class="img-modal-btn close-btn" type="button">X</button>
       <div class="img-modal-wrapper">
-        <img src="" alt="">
+        <img src="./images/img6.jpg" alt="리트리버">
       </div>
     </div>
   
