--- a/20230706slide/slide4(setInterval)/index.html
+++ b/20230706slide/slide4(setInterval)/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="" content="">
-  <meta name="" content="">
-  <meta name="" content="">
-  <title>setInterval</title>
+  <meta name="description" content="slide4 setInterval">
+  <meta name="keywords" content="html, CSS, javascript">
+  <meta name="author" content="kai">
+  <title>slid4 setInterval</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
