--- a/20230706slide/slide4(setInterval)/index.html
+++ b/20230706slide/slide4(setInterval)/index.html
@@ -6,12 +6,31 @@
   <meta name="description" content="slide4 setInterval">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
+
   <title>slid4 setInterval</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
     
+    <ul class="slide-wrapper">
+      <li class="slide-item"><img src="./images/img_visual1.jpg" alt="요리"></li>
+      <li class="slide-item"><img src="./images/img_visual2.jpg" alt="채소"></li>
+      <li class="slide-item"><img src="./images/img_visual3.jpg" alt="배송"></li>
+    </ul>
+    <div class="slide-btn">
+      <button id="slide-btn1" type="button"></button>
+      <button id="slide-btn2" type="button"></button>
+      <button id="slide-btn3" type="button"></button>
+    </div>
+    <div class="side-btn">
+      <button id="left-btn" type="button"><i class="fa-solid fa-chevron-left"></i></button>
+      <button id="right-btn" type="button"><i class="fa-solid fa-chevron-right"></i></button>
+    </div>
+
   </div>
   <script src="./JS/script.js"></script>
 </body>
