--- a/20230706slide/slide4(setInterval)/index.html
+++ b/20230706slide/slide4(setInterval)/index.html
@@ -15,11 +15,29 @@
 </head>
 <body>
   <div class="wrapper">
-    
+
     <ul class="slide-wrapper">
-      <li class="slide-item"><img src="./images/img_visual1.jpg" alt="요리"></li>
-      <li class="slide-item"><img src="./images/img_visual2.jpg" alt="채소"></li>
-      <li class="slide-item"><img src="./images/img_visual3.jpg" alt="배송"></li>
+      <li class="slide-item">
+        <img src="./images/img_visual1.jpg" alt="요리">
+        <div class="slide-item-content">
+          <p>식자재 유통의 베스트</p>
+          <p>Solution</p>
+        </div>
+      </li>
+      <li class="slide-item">
+        <img src="./images/img_visual2.jpg" alt="채소">
+        <div class="slide-item-content hidden">
+          <p>신선하고 차별화된 식자재</p>
+          <p>Provider</p>
+        </div>
+      </li>
+      <li class="slide-item">
+        <img src="./images/img_visual3.jpg" alt="배송">
+        <div class="slide-item-content hidden">
+          <p>고객의 성공을 위해</p>
+          <p>함께하는 Partner</p>
+        </div>
+      </li>
     </ul>
     <div class="slide-btn">
       <button id="slide-btn1" type="button"></button>
@@ -27,8 +45,8 @@
       <button id="slide-btn3" type="button"></button>
     </div>
     <div class="side-btn">
-      <button id="left-btn" type="button"><i class="fa-solid fa-chevron-left"></i></button>
-      <button id="right-btn" type="button"><i class="fa-solid fa-chevron-right"></i></button>
+      <button class="left-btn" type="button"><i class="fa-solid fa-chevron-left"></i></button>
+      <button class="right-btn" type="button"><i class="fa-solid fa-chevron-right"></i></button>
     </div>
 
   </div>
