--- a/20230706slide/slide4(setInterval)/index.html
+++ b/20230706slide/slide4(setInterval)/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="wrapper">
 
-    <ul class="slide-wrapper">
+    <ul class="slide-list">
       <li class="slide-item">
         <img src="./images/img_visual1.jpg" alt="요리">
         <div class="slide-item-content">
