--- a/20230706slide/slide4(setInterval)/index.html
+++ b/20230706slide/slide4(setInterval)/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
 
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
 
