--- a/20230724_ScrollEvent/index.html
+++ b/20230724_ScrollEvent/index.html
@@ -6,12 +6,24 @@
   <meta name="description" content="Scroll Event">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
+
   <title>Scroll Event</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    <header>
+      <nav>
+        <h1 class="logo">
+          <img src="./images/logo.png" alt="Logo">
+        </h1>
+        <button type="button"><i class="fa-solid fa-burger"></i></button>
+      </nav>
+    </header>
+    <div class="box"></div>
   </div>
   <script src="./JS/script.js"></script>
 </body>
