--- a/20230710_Menu/230725_tabmenu/index.html
+++ b/20230710_Menu/230725_tabmenu/index.html
@@ -6,12 +6,29 @@
   <meta name="description" content="Tab Menu">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
   <title>Tab Menu</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-    
+    <ul class="tab-list">
+      <li class="tab-item">Products</li>
+      <li class="tab-item">Information</li>
+      <li class="tab-item">Shipping</li>
+    </ul>
+    <div class="tab-content">
+      <p>상품</p>
+    </div>
+    <div class="tab-content hidden">
+      <p>정보</p>
+    </div>
+    <div class="tab-content hidden">
+      <p>배송</p>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
