--- a/20230710_Menu/230725_tabmenu/index.html
+++ b/20230710_Menu/230725_tabmenu/index.html
@@ -16,17 +16,17 @@
 <body>
   <div class="wrapper">
     <ul class="tab-list">
-      <li class="tab-item">Products</li>
+      <li class="tab-item blue">Products</li>
       <li class="tab-item">Information</li>
       <li class="tab-item">Shipping</li>
     </ul>
-    <div class="tab-content">
+    <div class="tab-content show">
       <p>상품</p>
     </div>
-    <div class="tab-content hidden">
+    <div class="tab-content">
       <p>정보</p>
     </div>
-    <div class="tab-content hidden">
+    <div class="tab-content">
       <p>배송</p>
     </div>
   </div>
