--- a/20230710_Menu/230725_tabmenu/index.html
+++ b/20230710_Menu/230725_tabmenu/index.html
@@ -19,6 +19,8 @@
       <li class="tab-item blue">Products</li>
       <li class="tab-item">Information</li>
       <li class="tab-item">Shipping</li>
+      <li class="tab-item">자주 묻는 질문</li>
+      <li class="tab-item">리뷰</li>
     </ul>
     <div class="tab-content show">
       <p>상품</p>
@@ -28,6 +30,12 @@
     </div>
     <div class="tab-content">
       <p>배송</p>
+    </div>
+    <div class="tab-content">
+      <p>큐앤에이</p>
+    </div>
+    <div class="tab-content">
+      <p>리뷰</p>
     </div>
   </div>
   <script src="./script.js"></script>
