--- a/Javascript/20230725_이벤트버블링/index.html
+++ b/Javascript/20230725_이벤트버블링/index.html
@@ -22,7 +22,7 @@
             <span class="input-group-text">ID</span>
             <div class="form-floating is-invalid">
               <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="user name" required>
-              <label for="floatingInputGroup2">user name</label>
+              <label for="floatingInputGroup2">ID</label>
             </div>
             <div class="invalid-feedback">
               아이디를 입력하세요.
@@ -32,10 +32,10 @@
 
         <form action="">
           <div class="input-group has-validation">
-            <span class="input-group-text">Password</span>
+            <span class="input-group-text">PW</span>
             <div class="form-floating is-invalid">
               <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="password" required>
-              <label for="floatingInputGroup2">password</label>
+              <label for="floatingInputGroup2">PW</label>
             </div>
             <div class="invalid-feedback">
               비밀번호를 입력하세요.
