--- a/Javascript/20230725_이벤트버블링/index.html
+++ b/Javascript/20230725_이벤트버블링/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="이벤트 버블링">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>이벤트 버블링</title>
