📝 class close-btn 추가

--- a/Javascript/20230725_이벤트버블링/index.html
+++ b/Javascript/20230725_이벤트버블링/index.html
@@ -47,12 +47,12 @@
         </form>
 
         <button type="button" class="btn btn-outline-primary">전송</button>
-        <button type="button" class="btn btn-outline-dark">닫기</button>
+        <button type="button" class="close-btn btn btn-outline-dark">닫기</button>
         
       </div>
     </div>
 
-    <button type="button" class="btn btn-outline-danger">OPEN</button>
+    <button type="button" class="open-btn btn btn-outline-danger">OPEN</button>
 
   </div>
   <script src="./script.js"></script>
