--- a/대전의온도/index.html
+++ b/대전의온도/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="대전의 온도">
-    <meta name="keywords" content="여행, 축제, 맛집, 데이트, 기념일">
-    <meta name="auhtor" content="꼬타비, 서우, 한나, Kai">
-    <title>대전의 온도</title>
-    <link rel="stylesheet" href="./style.css">
-    <!-- Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffc40d">
-    <meta name="msapplication-TileColor" content="#ffc40d">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
-    <!-- Font Awesome-->
-    <script src="https://kit.fontawesome.com/41707c0594.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="대전의 온도">
+<meta name="keywords" content="여행, 축제, 맛집, 데이트, 기념일">
+<meta name="auhtor" content="꼬타비, 서우, 한나, Kai">
+<title>대전의 온도</title>
+<link rel="stylesheet" href="./style.css">
+
+<!-- Favicon-->
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="manifest" href="./site.webmanifest">
+<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#ffc40d">
+<meta name="theme-color" content="#ffffff">
+
+<!-- Google Fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
+
+<!-- Font Awesome-->
+<script src="https://kit.fontawesome.com/41707c0594.js" crossorigin="anonymous"></script>
+
+<!-- Bootstrap-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
     <div class="wrapper">
@@ -47,9 +51,33 @@
             </nav>
         </header>
         <main>
-            <section>
-                슬라이드
+            <section class="slide-wrapper">
+                <div class="slide-list">
+                    <div class="slide-item">
+                      <img src="./images/캠핑대전.jpg" alt="캠핑대전 이미지">
+                    </div>
+                    <div class="slide-item">
+                      <img src="./images/누들대전.png" alt="누들대전 이미지">
+                    </div>
+                    <div class="slide-item">
+                      <img src="./images/대전0시축제.png" alt="대전0시축제 이미지">
+                    </div>
+                </div>
+                <button class="slide-btn" id="slide-prev" type="button">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </button>
+                <button class="slide-btn" id="slide-next" type="button">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+                <div id="slide-dots"></div>
             </section>
+
+            <div class="rotate-text-wrapper">
+                <div class="rotate-text">
+                    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, tempore.</span>
+                </div>
+            </div>
+            
             <section>
                 카테고리 들어갈 공간
             </section>
@@ -68,7 +96,7 @@
                 </div>
                 <div class="footer-bottom">
                     <div class="footer-logo">
-                        <img src="" alt="logo">
+                        <img src="./logo.jpg" alt="logo">
                     </div>
                     <ul>
                         <p>주소</p>
@@ -89,7 +117,8 @@
             </div>
         </footer>
     </div>
-    <script src=""></script>
+    <script src="./script.js"></script>
+    <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
