--- a/대전의온도/index.html
+++ b/대전의온도/index.html
@@ -34,7 +34,7 @@
         <header>
             <nav class="navbar">
                 <div class="navbar-logo">
-                    <a href="./index.html"><img src="./images/Logo.PNG" alt="logo" width="100px"></a>
+                    <a href="./index.html"><img src="./images/logo2.png" alt="logo" width="100px"></a>
                     <h1>대전의 온도</h1>
                 </div>
                 <div class="navbar-menu">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="footer-bottom">
                     <div class="footer-logo">
-                        <img src="./logo.jpg" alt="logo">
+                        <img src="./images/Logo.PNG" alt="logo">
                     </div>
                     <ul>
                         <p>주소</p>
