--- a/20230726네이버회원가입/index.html
+++ b/20230726네이버회원가입/index.html
@@ -11,60 +11,74 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="logo"><img src="./images/logo.png" alt="Naver Logo"></div>
+    <header>
 
-    <select name="nation" id="nation">
-        <option value="kor" selected>한국어</option>
-        <option value="eng">English</option>
-        <option value="chi">중국</option>
-        <option value="vie">베트남</option>
-    </select>
+      <div class="logo"><img src="./images/logo.png" alt="Naver Logo"></div>
 
-    <div class="checker-wrap">
-      <img src="./images/pc_check_off_24.png" alt="off">
-      <a href="">네이버 이용약관, 개인정보 수집 및 이용, 위치정보이용약관(선택), 프로모션 정보 수신(선택)에 모두 동의합니다.</a>
-    </div>
+      <select name="nation" id="nation">
+          <option value="kor" selected>한국어</option>
+          <option value="eng">English</option>
+          <option value="chi">중국</option>
+          <option value="vie">베트남</option>
+      </select>
 
-    <div class="checker-agree">
-      <img src="./images/pc_chcek_off_s_20.png" alt="off">
-      <span class="text-size"><b>네이버 이용약관 동의</b></span><span class="green">&nbsp;(필수)</span>
-      <div class="text-box">
-        <p>여러분을 환영합니다.</p>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam, illum odit iure itaque deserunt dicta sequi quidem excepturi ipsum numquam perspiciatis molestiae sapiente perferendis tenetur quos esse minima ut.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
-      </div>
-    </div>
-    <div class="checker-agree">
-      <img src="./images/pc_chcek_off_s_20.png" alt="off">
-      <span class="text-size"><b>개인정보 수집 및 이용 동의</b></span><span class="green">&nbsp;(필수)</span>
-      <div class="text-box">
-        <p>여러분을 환영합니다.</p>
-        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, aut nisi? Debitis quod optio incidunt reprehenderit iusto, fuga itaque dolorum id possimus eaque amet. Magni, pariatur ullam! Iste, amet suscipit.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
-      </div>
-    </div>
-    <div class="checker-agree">
-      <img src="./images/pc_chcek_off_s_20.png" alt="off">
-      <span class="text-size"><b>위치정보 이용약관 동의</b></span><span class="gray">&nbsp;(선택)</span>
-      <div class="text-box">
-        <p>여러분을 환영합니다.</p>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime neque omnis distinctio necessitatibus id molestias quasi, eos magnam fugit, eligendi molestiae incidunt! Distinctio eum soluta illum nobis enim commodi quis!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
-      </div>
-    </div>
-    <div class="checker-agree">
-      <img src="./images/pc_chcek_off_s_20.png" alt="off">
-      <span class="text-size"><b>프로모션 정보 수신 동의</b></span><span class="gray">&nbsp;(선택)</span>
-      <div class="text-box">
-        <p>여러분을 환영합니다.</p>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea non consequuntur velit sapiente vel recusandae impedit quam repellat, dolores hic praesentium distinctio fugit, eligendi et atque reiciendis illum laborum magnam.</span>
-      </div>
-    </div>
-    <div class="btn-wrap">
-      <button id="btn-no" type="button">취소</button>
-      <button id="btn-yes" type="button">확인</button>
-    </div>
-    <div class="join-us-text">
-      <p class="gray">회사, 동아리 등 단체에서 사용할 ID가 필요하세요?
-        <a class="gray ahref" href=""> 단체 회원 가입</a></p>
-    </div>
+    </header>
+    
+
+    <main>
+
+      <section>
+
+        <div class="checker-wrap">
+          <input type="checkbox" name="checker" id="checker0" class="total checkbox-img"><label for="checker0">&nbsp;
+          <a href="">네이버 이용약관, 개인정보 수집 및 이용, 위치정보이용약관(선택), 프로모션 정보 수신(선택)에 모두 동의합니다.</a>
+          </label>
+        </div>
+    
+        <input type="checkbox" name="checker" id="checker1" class="total checkbox-img"><label for="checker1">
+          <span class="text-size"><b>네이버 이용약관 동의</b></span><span class="green">&nbsp;(필수)</span>
+          <div class="text-box">
+            <p>여러분을 환영합니다.</p>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam, illum odit iure itaque deserunt dicta sequi quidem excepturi ipsum numquam perspiciatis molestiae sapiente perferendis tenetur quos esse minima ut.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
+          </div>
+        </label>
+        </input>
+        <input type="checkbox" name="checker" id="checker2" class="total checkbox-img"><label for="checker2">
+          <span class="text-size"><b>개인정보 수집 및 이용 동의</b></span><span class="green">&nbsp;(필수)</span>
+          <div class="text-box">
+            <p>여러분을 환영합니다.</p>
+            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, aut nisi? Debitis quod optio incidunt reprehenderit iusto, fuga itaque dolorum id possimus eaque amet. Magni, pariatur ullam! Iste, amet suscipit.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
+          </div>
+        </label>
+        </input>
+        <input type="checkbox" name="checker" id="checker3" class="total checkbox-img"><label for="checker3">
+          <span class="text-size"><b>위치정보 이용약관 동의</b></span><span class="gray">&nbsp;(선택)</span>
+          <div class="text-box">
+            <p>여러분을 환영합니다.</p>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime neque omnis distinctio necessitatibus id molestias quasi, eos magnam fugit, eligendi molestiae incidunt! Distinctio eum soluta illum nobis enim commodi quis!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?</span>
+          </div>
+        </label>
+        </input>
+        <input type="checkbox" name="checker" id="checker4" class="total checkbox-img"><label for="checker4">
+          <span class="text-size"><b>프로모션 정보 수신 동의</b></span><span class="gray">&nbsp;(선택)</span>
+          <div class="text-box">
+            <p>여러분을 환영합니다.</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic quos autem id reiciendis nisi alias necessitatibus repellat dicta, possimus aut esse praesentium rem blanditiis eveniet aliquam neque quia illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea non consequuntur velit sapiente vel recusandae impedit quam repellat, dolores hic praesentium distinctio fugit, eligendi et atque reiciendis illum laborum magnam.</span>
+          </div>
+        </label>
+        </input>
+        <div class="btn-wrap">
+          <button id="btn-no" type="button">취소</button>
+          <button id="btn-yes" type="button">확인</button>
+        </div>
+        <div class="join-us-text">
+          <p class="gray">회사, 동아리 등 단체에서 사용할 ID가 필요하세요?
+            <a class="gray ahref" href=""> 단체 회원 가입</a></p>
+        </div>
+
+      </section>
+
+    </main>
 
   </div>
   <script src="./JS/script.js"></script>
