--- a/20230726네이버회원가입/index.html
+++ b/20230726네이버회원가입/index.html
@@ -30,12 +30,12 @@
       <section>
 
         <div class="checker-wrap">
-          <input type="checkbox" name="checker" id="checker0" class="total checkbox-img"><label for="checker0">&nbsp;
+          <input type="checkbox" name="checker" id="checkerAll"><label for="checkerAll">&nbsp;
           <a href="">네이버 이용약관, 개인정보 수집 및 이용, 위치정보이용약관(선택), 프로모션 정보 수신(선택)에 모두 동의합니다.</a>
           </label>
         </div>
     
-        <input type="checkbox" name="checker" id="checker1" class="total checkbox-img"><label for="checker1">
+        <input type="checkbox" name="checker" id="checker1" class="checkbox-img"><label for="checker1">
           <span class="text-size"><b>네이버 이용약관 동의</b></span><span class="green">&nbsp;(필수)</span>
           <div class="text-box">
             <p>여러분을 환영합니다.</p>
@@ -43,7 +43,7 @@
           </div>
         </label>
         </input>
-        <input type="checkbox" name="checker" id="checker2" class="total checkbox-img"><label for="checker2">
+        <input type="checkbox" name="checker" id="checker2" class="checkbox-img"><label for="checker2">
           <span class="text-size"><b>개인정보 수집 및 이용 동의</b></span><span class="green">&nbsp;(필수)</span>
           <div class="text-box">
             <p>여러분을 환영합니다.</p>
@@ -51,7 +51,7 @@
           </div>
         </label>
         </input>
-        <input type="checkbox" name="checker" id="checker3" class="total checkbox-img"><label for="checker3">
+        <input type="checkbox" name="checker" id="checker3" class="checkbox-img"><label for="checker3">
           <span class="text-size"><b>위치정보 이용약관 동의</b></span><span class="gray">&nbsp;(선택)</span>
           <div class="text-box">
             <p>여러분을 환영합니다.</p>
@@ -59,7 +59,7 @@
           </div>
         </label>
         </input>
-        <input type="checkbox" name="checker" id="checker4" class="total checkbox-img"><label for="checker4">
+        <input type="checkbox" name="checker" id="checker4" class="checkbox-img"><label for="checker4">
           <span class="text-size"><b>프로모션 정보 수신 동의</b></span><span class="gray">&nbsp;(선택)</span>
           <div class="text-box">
             <p>여러분을 환영합니다.</p>
