--- a/20230726네이버회원가입/index.html
+++ b/20230726네이버회원가입/index.html
@@ -1192,6 +1192,8 @@
     </section>
 
   </div>
+  <!-- <script src="./JS/약관동의(jQuery).js"></script> -->
+  <script src="./JS/약관동의.js"></script>
   <script src="./JS/script.js"></script>
 </body>
 </html>
