--- a/Javascript/20230731_정규식.html
+++ b/Javascript/20230731_정규식.html
@@ -22,19 +22,33 @@
     // 그래서 사용하는 게 정규식(Regular Expreession)
     
     let a = /a/;
+
     // 소문자 알파벳 a to z 까지 하나라도 들어있는지 검사
     let b = /[a-z]/;
+
     // 대문자
     let c = /[A-Z]/;
     
     // 모든 알파벳(대, 소) 중 하나라도 포함됐는지 검사
     let d = /[a-zA-z]/;
 
-    // console.log(c.test('EEE'))
-
     // 아무 한글 문자 한 개라도 포함됐는지 
     let e = /[ㄱ-ㅎㅏ-ㅣ가-하]/;
-    console.log(e.test('안녕하세요'));
+    // console.log(e.test('안녕하세요'));
+
+    // a로 시작하는 글자 검사
+    let f = /^a/;
+    let g = /^0-9/;
+    // console.log(f.test('a가나다'));
+    console.log(g.test('123'));  // 확인 필요
+
+    // a로 끝나는 글자 검사
+    let h = /h$/;
+    // console.log(h.test('랄라라h'));
+
+    // a 또는 b가 있는지 검사
+    let i = /a|b/;
+    // console.log(i.test('랄라a라'));
 
   </script>
   <div class="wrapper">
