🎉 네이버 회원가입 시작

--- a/20230726네이버회원가입/join.html
+++ b/20230726네이버회원가입/join.html
@@ -6,8 +6,8 @@
   <meta name="description" content="Naver 회원가입 page">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
-  <title>회원가입</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>네이버 회원가입 Join</title>
+  <link rel="stylesheet" href="./stylejoin.css">
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </head>
