--- a/Javascript/20230731_정규식.html
+++ b/Javascript/20230731_정규식.html
@@ -38,7 +38,7 @@
 
     // a로 시작하는 글자 검사
     let f = /^a/;
-    let g = /^0-9/;
+    let g = /^[0-9]/;
     // console.log(f.test('a가나다'));
     console.log(g.test('123'));  // 확인 필요
 
