--- a/20230726네이버회원가입/join.html
+++ b/20230726네이버회원가입/join.html
@@ -24,34 +24,41 @@
     <main>
         <section>
             <p>아이디</p>
-            <input type="text" placeholder="@naver.com">
+            <div class="inputbox">
+                <input type="text" name="userid">
+                <div>@naver.com</div>
+            </div>
+            <span class="write0 redchk">필수 정보입니다.</span>
+            <span class="write1 redchk">5~20자의 영문 소문자만 사용가능합니다.</span>
+            <span class="write2 greenchk">멋진 아이디네요!</span>
             <p>비밀번호</p>
-            <input type="password">
+            <input class="password" type="password" id="pwd1">
             <div class="imgrock">
-                <img src="./images/m_icon_pw_step_01.png" alt="">
-                <img class="hidden" src="./images/m_icon_pw_step_10.png" alt="">
-                <img class="hidden" src="./images/m_icon_pw_step_04.png" alt="">
+                <img class="pw-img1" src="./images/m_icon_pw_step_01.png" alt="">
+                <img class="pw-img2 hidden" src="./images/m_icon_pw_step_10.png" alt="">
+                <img class="pw-img3 hidden" src="./images/m_icon_pw_step_04.png" alt="">
+                <span class="write5 greenchk">안전</span>
+                <span class="write6 redchk">사용불가</span>
             </div>
+            <span class="write3 redchk">필수 정보입니다.</span>
+            <span class="write4 redchk">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.</span>
             <p>비밀번호 재확인</p>
-            <input type="password">
+            <input class="password2" type="password" id="pwd2">
             <div class="imgrock">
-                <img src="./images/m_icon_pw_step_02.png" alt="">
-                <img class="hidden" src="./images/m_icon_pw_step_07.png" alt="">
+                <img class="pw-img4" src="./images/m_icon_pw_step_02.png" alt="">
+                <img class="pw-img5 hidden" src="./images/m_icon_pw_step_07.png" alt="">
             </div>
-            <span class="redchk">필수 정보입니다.</span>
-            <span class="redchk">5~20자의 영문 소문자만 사용가능합니다.</span>
-            <span class="greenchk">멋진 아이디네요!</span>
-            <span class="redchk">필수 정보입니다.</span>
-            <span class="redchk">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.</span>
-            <span class="redchk">비밀번호가 일치하지 않습니다.</span>
+            <span class="write7 redchk">필수 정보입니다.</span>
+            <span class="write8 redchk">비밀번호가 일치하지 않습니다.</span>
         </section>
 
         <section>
             <p>이름</p>
-            <input type="text">
+            <input class="name" type="text">
+            <span class="txt1 redchk">필수 정보입니다.</span>
             <p>생년월일</p>
             <div class="birth">
-                <input type="number" placeholder="년(4자)">
+                <input class="year" type="number" placeholder="년(4자)">
                 <div class="month">
                 <select name="" id="">
                   <option value="">월</option>
@@ -69,12 +76,11 @@
                   <option value="">12</option>
                 </select>
                 </div>
-                <input type="number" placeholder="일">
+                <input class="date" type="number" placeholder="일">
             </div>
-            <span class="redchk">필수 정보입니다.</span>
-            <span class="redchk">태어난 년도 4자리를 정확하게 입력하세요.</span>
-            <span class="redchk">태어난 월을 선택하세요.</span>
-            <span class="redchk">태어난 일(날짜) 2자리를 정확하게 입력하세요.</span>
+            <span class="txt2 redchk">태어난 년도 4자리를 정확하게 입력하세요.</span>
+            <span class="txt3 redchk">태어난 월을 선택하세요.</span>
+            <span class="txt4 redchk">태어난 일(날짜) 2자리를 정확하게 입력하세요.</span>
             <p>성별</p>
             <div class="select">
                 <input type="radio" name="" id="man"><label for="man">남자</label>
@@ -82,8 +88,8 @@
                 <input type="radio" name="" id="nohuman"><label for="nohuman">선택안함</label>
             </div>
             <p>본인 확인 이메일<span class="text-gray">(선택)</span></p>
-            <input type="email" placeholder="선택입력">
-            <span class="redchk">이메일 주소를 다시 확인해주세요.</span>
+            <input class="email" type="email" placeholder="선택입력">
+            <span class="txt5 redchk">이메일 주소를 다시 확인해주세요.</span>
             <p>휴대전화</p>
             <div class="select_box" id="selNationNo">
               <select id="nationNo" name="nationNo" class="select">
