--- a/20230726네이버회원가입/join.html
+++ b/20230726네이버회원가입/join.html
@@ -139,7 +139,7 @@
               <option value="49">독일 +49</option>
               <option value="960">몰디브 +960</option>
               <option value="1">미국/캐나다 +1</option>
-              <option value="254">케나 +254</option>
+              <option value="254">케냐 +254</option>
             </select>
           </div>
 
@@ -161,21 +161,21 @@
           <p>주소</p>
           <div class="postnum">
             <div class="inputbox">
-              <input type="text" placeholder="우편번호">
+              <input id="sample6_postcode" type="text" placeholder="우편번호">
             </div>
-            <button type="button" class="btn-primary">우편번호 찾기</button>
+            <button onclick="sample6_execDaumPostcode()" type="button" class="btn-primary">우편번호 찾기</button>
           </div>
 
           <div class="inputbox">
-            <input type="text" placeholder="주소">
+            <input id="sample6_address" type="text" placeholder="주소">
           </div>
 
           <div class="inputbox">
-            <input type="text" placeholder="상세주소">
+            <input id="sample6_detailAddress" type="text" placeholder="상세주소">
           </div>
 
           <div class="inputbox">
-            <input type="text" placeholder="참고항목">
+            <input id="sample6_extraAddress" type="text" placeholder="참고항목">
           </div>
         </div>
         <button type="submit" id="joinbtn" class="btn-primary">가입하기</button>
@@ -183,5 +183,6 @@
     </section>
   </div>
   <script src="./js/join.js"></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </body>
 </html>
