--- a/20230726네이버회원가입/join.html
+++ b/20230726네이버회원가입/join.html
@@ -182,7 +182,8 @@
       </form>
     </section>
   </div>
-  <script src="./js/join.js"></script>
+  <!-- <script src="./js/join.js"></script> -->
+  <script src="./JS/join(jQuery).js"></script>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </body>
 </html>
