--- a/20230726네이버회원가입/join.html
+++ b/20230726네이버회원가입/join.html
@@ -151,7 +151,7 @@
           </div>
 
           <div class="inputbox disinput">
-            <input disabled type="text" id="veritext" name="veritext" placeholder="인증번호 입력하세요">
+            <input disabled type="text" id="veritext" name="veritext" placeholder="인증번호를 입력하세요">
             <div></div>
           </div>
           <p class="warn"></p>
