--- a/20230811_카드뒤집기효과/index.html
+++ b/20230811_카드뒤집기효과/index.html
@@ -4,14 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="카드 뒤집기 효과">
-  <meta name="keywords" content="HTML, CSS, Javacript">
+  <meta name="keywords" content="HTML, CSS, Javascript">
   <meta name="author" content="kai">
   <title>카드 뒤집기 효과</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    <div class="card-container">
+      <div class="card">
+        <div class="card-inner">
+          <div class="front">
+            <img class="map-img" src="./images/map.png" alt="map">
+            <div class="row">
+              <img src="./images/chip.png" alt="chip">
+              <img src="./images/visa.png" alt="visa logo">
+            </div>
+            <div class="row card-num">
+              <p>6548</p>
+              <p>4872</p>
+              <p>3898</p>
+              <p>9720</p>
+            </div>
+            <div class="row card-holder">
+              <p>CARD HOLLDER</p>
+              <p>VALLID TILL</p>
+            </div>
+            <div class="row card-name">
+              <p>HONG GILDONG</p>
+              <p>07 / 23</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script></script>
 </body>
