📝 카드 뒤집기 back 마크업

--- a/20230811_카드뒤집기효과/index.html
+++ b/20230811_카드뒤집기효과/index.html
@@ -14,6 +14,7 @@
     <div class="card-container">
       <div class="card">
         <div class="card-inner">
+          
           <div class="front">
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="row">
@@ -35,6 +36,23 @@
               <p>07 / 23</p>
             </div>
           </div>
+
+          <div class="back">
+            <img class="map-img" src="./images/map.png" alt="map">
+            <div class="bar"></div>
+            <div class="row card-cvv">
+              <img src="./images/pattern.png" alt="pattern">
+              <p>135</p>
+            </div>
+            <div class="card-text">
+              <p>This is a virtual card design built using HTML and CSS. You can also design something like this.</p>
+            </div>
+            <div class="row card-sig">
+              <p>CUSTOMER SIGNATURE</p>
+              <img src="./images/visa.png" alt="visa logo">
+            </div>
+          </div>
+        
         </div>
       </div>
     </div>
