--- a/20230811_카드뒤집기효과/index.html
+++ b/20230811_카드뒤집기효과/index.html
@@ -15,7 +15,7 @@
       <div class="card">
         <div class="card-inner">
           
-          <div class="front">
+          <div class="front item">
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="row">
               <img src="./images/chip.png" alt="chip">
@@ -37,14 +37,14 @@
             </div>
           </div>
 
-          <div class="back">
+          <div class="back item">
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="bar"></div>
             <div class="row card-cvv">
               <img src="./images/pattern.png" alt="pattern">
               <p>135</p>
             </div>
-            <div class="card-text">
+            <div class="row card-text">
               <p>This is a virtual card design built using HTML and CSS. You can also design something like this.</p>
             </div>
             <div class="row card-sig">
