--- a/20230811_카드뒤집기효과/index.html
+++ b/20230811_카드뒤집기효과/index.html
@@ -15,7 +15,7 @@
       <div class="card">
         <div class="card-inner">
           
-          <div class="front item">
+          <div class="front">
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="row">
               <img src="./images/chip.png" alt="chip">
@@ -37,7 +37,7 @@
             </div>
           </div>
 
-          <div class="back item">
+          <div class="back">
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="bar"></div>
             <div class="row card-cvv">
