--- a/20230811_카드뒤집기효과/index.html
+++ b/20230811_카드뒤집기효과/index.html
@@ -19,7 +19,7 @@
             <img class="map-img" src="./images/map.png" alt="map">
             <div class="row">
               <img src="./images/chip.png" alt="chip">
-              <img src="./images/visa.png" alt="visa logo">
+              <img class="logo" src="./images/visa.png" alt="visa logo">
             </div>
             <div class="row card-num">
               <p>6548</p>
@@ -49,7 +49,7 @@
             </div>
             <div class="row card-sig">
               <p>CUSTOMER SIGNATURE</p>
-              <img src="./images/visa.png" alt="visa logo">
+              <img class="logo" src="./images/visa.png" alt="visa logo">
             </div>
           </div>
         
