--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -11,7 +11,44 @@
 </head>
 <body>
   <div class="wrapper">
-
+    <header>
+      <nav>
+        <h1></h1>
+        <div class="logo">
+          <img src="./images/logo_b.png" alt="logo">
+        </div>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Company</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Community</a></li>
+          <li><a href="">Contact us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <img src="./images/cloud1.png" alt="cloud">
+      </section>
+      <section>
+        <div class="main-text">
+          <p>Lorem Ipsum</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="phone-container">
+          <img src="./images/phone_morning.png" alt="phone">
+          <img src="./images/cloud2.png" alt="cloud">
+          <p class="time"></p>
+        </div>
+      </section>
+      <section>
+        <button type="button">morning</button>
+        <button type="button">afternoon</button>
+        <button type="button">evening</button>
+        <button type="button">night</button>
+      </section>
+    </main>
+    <footer></footer>
   </div>
   <script src="./js/script.js"></script>
 </body>
