📝 class, cloud 추가

--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -15,7 +15,7 @@
       <nav>
         <h1 class="visually-hidden">메뉴</h1>
         <div class="logo">
-          <img src="./images/logo_b.png" alt="logo">
+          <img id="logo" src="./images/logo_b.png" alt="logo">
         </div>
         <ul>
           <li><a href="">About</a></li>
@@ -28,6 +28,7 @@
     </header>
     <main>
       <img class="cloud2" src="./images/cloud2.png" alt="cloud">
+      <img class="cloud3" src="./images/cloud1.png" alt="cloud">
       <section class="main-container">
         <div class="main-text">
           <p>Lorem <span>Ipsum</span></p>
@@ -37,18 +38,19 @@
           <div class="phone">
             <div class="cloud1-box">
               <img src="./images/cloud1.png" alt="cloud">
+              <img class="cloud4" src="./images/cloud2.png" alt="cloud">
             </div>
-            <img src="./images/phone_morning.png" alt="phone">
-            <p class="time">00 : 00 : 00</p>
+            <img id="phone-hand" src="./images/phone_morning.png" alt="phone">
+            <p class="time"></p>
           </div>
         </div>
       </section>
       <section class="btn-container">
         <div class="btn-group">
-          <button type="button">morning</button>
-          <button type="button">afternoon</button>
-          <button type="button">evening</button>
-          <button type="button">night</button>
+          <button class="morning" type="button">morning</button>
+          <button class="afternoon" type="button">afternoon</button>
+          <button class="evening" type="button">evening</button>
+          <button class="night" type="button">night</button>
         </div>
       </section>
     </main>
