📝 hover 시도 중 임시 저장

--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -41,7 +41,7 @@
               <img class="cloud4" src="./images/cloud2.png" alt="cloud">
             </div>
             <img id="phone-hand" src="./images/phone_morning.png" alt="phone">
-            <p class="time"></p>
+            <p class="time">00:00:00</p>
           </div>
         </div>
       </section>
