--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -6,6 +6,10 @@
   <meta name="description" content="JS Clock">
   <meta name="keywords" content="html, css, javascript">
   <meta name="author" content="kai">
+
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
   <title>JS Clock</title>
   <link rel="stylesheet" href="./style.css">
 </head>
