--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -15,7 +15,19 @@
 </head>
 <body>
   <div class="wrapper">
-
+    <img src="./images/cloud1.png" alt="cloud1">
+    <img src="./images/cloud2.png" alt="cloud2">
+    
+    <header class="global-header">
+      <h1 class="logo"></h1>
+      <ul class="gnb-list">
+        <li class="gnb-item"><a href="">About</a></li>
+        <li class="gnb-item"><a href="">Company</a></li>
+        <li class="gnb-item"><a href="">History</a></li>
+        <li class="gnb-item"><a href="">Community</a></li>
+        <li class="gnb-item"><a href="">Contact Us</a></li>
+      </ul>
+    </header>
   </div>
   <script src="./js/script.js"></script>
 </body>
