✨ JS Clock markup

--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <div class="wrapper">
+
     <img src="./images/cloud1.png" alt="cloud1">
     <img src="./images/cloud2.png" alt="cloud2">
     
@@ -28,6 +29,31 @@
         <li class="gnb-item"><a href="">Contact Us</a></li>
       </ul>
     </header>
+
+    <section>
+      <p>
+        <strong>Lorem</strong>Ipsum
+      </p>
+      <em>Lorem ipsum dolor sit amet consectetur adipisicing.</em>
+    </section>
+
+    <section id="phone">
+      <div>
+        <p class="phone-time"></p>
+        <img src="./images/cloud1.png" alt="cloud1">
+        <img src="./images/cloud2.png" alt="cloud2">
+      </div>
+    </section>
+
+    <div class="btn-wrapper">
+      <ul class="btn-list">
+        <li class="btn-item"><a href="">morning</a></li>
+        <li class="btn-item"><a href="">afternoon</a></li>
+        <li class="btn-item"><a href="">evening</a></li>
+        <li class="btn-item"><a href="">night</a></li>
+      </ul>
+    </div>
+
   </div>
   <script src="./js/script.js"></script>
 </body>
