--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -30,7 +30,7 @@
       </ul>
     </header>
 
-    <section>
+    <section class="lorem-txt">
       <p>
         <strong>Lorem</strong>Ipsum
       </p>
