📝 테스트용 임시 텍스트

--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper morning">
 
     <img src="./images/cloud1.png" alt="cloud1">
     <img src="./images/cloud2.png" alt="cloud2">
@@ -39,7 +39,7 @@
 
     <section id="phone">
       <div>
-        <p class="phone-time"></p>
+        <p class="phone-time">00:00:00</p>
         <img src="./images/cloud1.png" alt="cloud1">
         <img src="./images/cloud2.png" alt="cloud2">
       </div>
