--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -39,7 +39,7 @@
 
     <section id="phone">
       <div>
-        <p class="phone-time">00:00:00</p>
+        <p class="phone-time"></p>
         <img src="./images/cloud1.png" alt="cloud1">
         <img src="./images/cloud2.png" alt="cloud2">
       </div>
