📝 wrapper class -> id

--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div id="wrapper">
 
     <img src="./images/cloud1.png" alt="cloud1">
     <img src="./images/cloud2.png" alt="cloud2">
