--- a/20230814_JS_Clock/index.html
+++ b/20230814_JS_Clock/index.html
@@ -55,6 +55,7 @@
     </div>
 
   </div>
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
+  <script src="./js/script(jQuery).js"></script>
 </body>
 </html>
