--- a/Javascript/20230817_object, array/index.html
+++ b/Javascript/20230817_object, array/index.html
@@ -24,7 +24,7 @@
     let computer = ['SAMSUNG','LG','APPLE','MAC','DELL']
     // console.log(computer[1])
 
-    // let com = document.querySelector('.com');
+    let com = document.querySelector('.com');
     // com = computer[1];
 
     document.querySelector('.com').innerHTML = computer[1];
@@ -63,6 +63,8 @@
     // object는 자료에 이름k(ey)을 붙여서 저장
     // array는 자료간 순서가 존재, object 순서 개념 존재 x
     // array는 자료간 정렬 / 자르기 기능 할 수 있다.
+
+    com.innerHTML = '내 컴퓨터는 '+sw.computer+'이고, '+'내 이름은 '+sw.name+'이야.';
 
 
 </script>
