--- a/Javascript/20230817_object, array/index.html
+++ b/Javascript/20230817_object, array/index.html
@@ -64,7 +64,7 @@
     // array는 자료간 순서가 존재, object 순서 개념 존재 x
     // array는 자료간 정렬 / 자르기 기능 할 수 있다.
 
-    com.innerHTML = '내 컴퓨터는 '+sw.computer+'이고, '+'내 이름은 '+sw.name+'이야.';
+    com.innerHTML = '내 컴퓨터는 '+sw.computer+'이고, 내 이름은 '+sw.name+'이야.';
 
 
 </script>
