--- a/Javascript/20230817_object, array/index.html
+++ b/Javascript/20230817_object, array/index.html
@@ -61,7 +61,7 @@
     // [[Prototype]]
     // : Array(0)
     
-    // object는 자료에 이름k(ey)을 붙여서 저장
+    // object는 자료에 이름(key)을 붙여서 저장
     // array는 자료간 순서가 존재, object 순서 개념 존재 x
     // array는 자료간 정렬 / 자르기 기능 할 수 있다.
     
