📝 설명 주석 추가

--- a/Javascript/20230817_object, array/nike.html
+++ b/Javascript/20230817_object, array/nike.html
@@ -95,7 +95,14 @@
     // $('.sho-info > p:last-child').html(products[0].size);
     
 
-
+    // 프론트엔드 개발자가 하는 역할
+    // 서버가 보낸 데이터를 html에 (바인딩)꽂아준다.
+    // 전문 용어로 '데이터 바인딩'이라고 한다.
+    // 데이터 바인딩을 쉽고 편하게 할 수 있도록
+    // 도와주는 도구 : React, Vue, angular 등
+    
+    // 시작 기호가 대괄호[], 중괄호{}에 따라
+    // Array, object 구분
 
 
   </script>
