📝 box-item 주석처리

--- a/Javascript/20230817_object, array/nike.html
+++ b/Javascript/20230817_object, array/nike.html
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <div class="box-list">
-      <div class="box-item">
+      <!-- <div class="box-item">
         <img src="" alt="">
         <div class="sho-info">
           <h3></h3>
@@ -37,7 +37,7 @@
           <p></p>
           <p></p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <script>
