📝 링크 확인용 주석 처리

--- a/Javascript/20230817_object, array/nike.html
+++ b/Javascript/20230817_object, array/nike.html
@@ -37,8 +37,8 @@
           <p></p>
           <p></p>
         </div>
-      </div> -->
-    </div>
+      </div>
+    </div> -->
   </div>
   <script>
     // 프론트엔드 개발자가 하는 역할
@@ -51,6 +51,6 @@
     // Array, object 구분
   </script>
   <script src="./nike.js"></script>
-  <script src="./nike copy.js"></script>
+  <!-- <script src="./nike copy.js"></script> -->
 </body>
 </html>
