📝 .js 파일 연결 및 주석 처리

--- a/Javascript/20230817_object, array/nike.html
+++ b/Javascript/20230817_object, array/nike.html
@@ -51,6 +51,7 @@
     // Array, object 구분
   </script>
   <script src="./nike.js"></script>
+  <!-- <script src="./nike copy copy.js"></script> -->
   <!-- <script src="./nike copy.js"></script> -->
 </body>
 </html>
