--- a/20230512ATagEx/index.html
+++ b/20230512ATagEx/index.html
@@ -15,7 +15,7 @@
     
     <br><br><br><br><br><br><br>
     <a href="#go">
-      <img src="./images/google.png" alt="구글">
+      <img src="./google.png" alt="구글">
     </a>
     <div class="newpage">
     Google 이미지를 눌렀을 때 <strong>구글로 이동할 수 있는<br>
@@ -29,7 +29,7 @@
       <h1 id="go">구글로 이동!</h1>
     </div>
     <a href="https://www.google.com" target="_blank">
-      <img src="./images/google.png" alt="구글">
+      <img src="./google.png" alt="구글">
     </a>
     <div class="newpage">
     <strong>구글 이미지를 클릭하면 <ins>구글로 이동합니다.</ins></strong>
