--- a/20230512ATagEx/index2.html
+++ b/20230512ATagEx/index2.html
@@ -15,7 +15,7 @@
 
     <div class="google">
       <a href="./index2-1.html" target="_blank">
-        <img src="./images/google.png" alt="google logo">
+        <img src="./google.png" alt="google logo">
       </a>
       <!-- 폰트 두껍게 굵기 조정하기
         1. <span>으로 감싸서 스타일로 굵기
