--- a/20230512ATagEx/index2-1.html
+++ b/20230512ATagEx/index2-1.html
@@ -16,7 +16,7 @@
     <div class="google">
       <h1 class="white-bgc">구글로 이동!</h1>
       <a href="https://www.google.com/">
-        <img src="./images/google.png" alt="Google logo">
+        <img src="./google.png" alt="Google logo">
       </a>
       <p class="txt-bold white-bgc">구글 이미지를 클릭하면 <span class="txt-under">구글로 이동합니다.</span></p>
     </div>
