--- a/20230822_팝업Cookie/index.html
+++ b/20230822_팝업Cookie/index.html
@@ -11,15 +11,20 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="modal-popup">
-      <h1>팝업창</h1>
-      <p>This is the content of the popup.</p>
-      <input type="checkbox"><span>24시간 동안 팝업창 보지 않기</span>
-      <button type="button">Close</button>
+    <div class="popup">
+      <div class="popup-content">
+        <h2>팝업창</h2>
+        <p>This is the content of the popup.</p>
+        <div>
+          <label>
+            <input type="checkbox" id="non-popup">
+            24시간 동안 팝업창 보지 않기
+          </label>
+        </div>
+        <button type="button" id="close-btn">Close</button>
+      </div>
     </div>
   </div>
-  <div class="overlay"></div>
-
   <script src="./script.js"></script>
 </body>
 </html>
