🚧 텍스트 솟구치는 이유 연구 중

--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -27,15 +27,16 @@
       </div>
       <div class="input-wrap">
         <label for="inp" class="inp">
-          <input type="text" name="userid" id="userid" placeholder="&nbsp;">
-          <p>전화번호, 사용자 이름 또는 이메일</p>
+          <input type="text" name="userid" id="userid">
+          <p class="userid-txt">전화번호, 사용자 이름 또는 이메일</p>
         </label>
         <label for="inp" class="inp">
-          <input type="password" name="userpw" id="userpw" placeholder="&nbsp;">
-          <p>비밀번호</p>
+          <input type="password" name="userpw" id="userpw">
+          <p class="userpw-txt">비밀번호</p>
+          <p class="warn">비밀번호 표시</p>
         </label>
       </div>
-      <button type="submit">로그인</button>
+      <button type="button">로그인</button>
       <div class="hr-wrap">
         <hr>
         <span>또는</span>
@@ -73,7 +74,7 @@
       <span><a href="">인기 계정</a></span>
       <span><a href="">위치</a></span>
       <span><a href="">Instagram Lite</a></span>
-      <span id="mode"><a href="">DarkMode</a></span>
+      <span id="mode">DarkMode</span>
       <div class="copyright">
         <p>© 2023 Instagram from Meta</p>
       </div>
