🚧 위치 조정 중

--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -26,15 +26,15 @@
         <img src="./images/logo-light.png" alt="logo">
       </div>
       <div class="input-wrap">
-        <label for="inp" class="inp">
+        <div class="inp">
           <input type="text" name="userid" id="userid">
           <p class="userid-txt">전화번호, 사용자 이름 또는 이메일</p>
-        </label>
-        <label for="inp" class="inp">
+        </div>
+        <div class="inp">
           <input type="password" name="userpw" id="userpw">
           <p class="userpw-txt">비밀번호</p>
           <p class="warn">비밀번호 표시</p>
-        </label>
+        </div>
       </div>
       <button type="button">로그인</button>
       <div class="hr-wrap">
