--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -21,64 +21,50 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="log-wrap">
-      <div class="logo">
-        <img src="./images/logo-light.png" alt="logo">
-      </div>
-      <div class="input-wrap">
-        <div class="inp">
-          <input type="text" name="userid" id="userid">
-          <p class="userid-txt">전화번호, 사용자 이름 또는 이메일</p>
+    <div class="form-container">
+      <div class="form-box">
+        <h1 class="logo">
+          <img class="light-logo" src="./images/logo-light.png" alt="logo">
+          <img class="dark-logo" src="./images/logo-dark.png" alt="logo">
+        </h1>
+
+        <div class="signin-form">
+          <div class="form-group">
+            <div class="animate-input">
+              <span>전화번호, 사용자 이름 또는 이메일</span>
+              <input type="text">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="animate-input">
+              <span>비밀번호</span>
+              <input type="password">
+              <button type="button">비밀번호 표시</button>
+              <button type="button">비밀번호 숨기기</button>
+            </div>
+          </div>
+          <div class="btn-group">
+            <button class="btn-login" type="button">로그인</button>
+          </div>
+          <div class="or-box">
+            <div></div>
+            <div>또는</div>
+            <div></div>
+          </div>
+          <div class="btn-group">
+            <button class="fb-btn" type="button">
+              <img src="./images/facebook-icon.png" alt="facebook-icon">
+              <span>페이스북으로 로그인</span>
+            </button>
+            <a class="forgot-pw" href="">비밀번호를 잊으셨나요?</a>
+          </div>
         </div>
-        <div class="inp">
-          <input type="password" name="userpw" id="userpw">
-          <p class="userpw-txt">비밀번호</p>
-          <p class="warn">비밀번호 표시</p>
-        </div>
-      </div>
-      <button type="button">로그인</button>
-      <div class="hr-wrap">
-        <hr>
-        <span>또는</span>
-        <hr>
-      </div>
-      <div class="app-login">
-        <img src="./images/facebook-icon.png" alt="facebook">
-        <a href="">
-          <span>페이스북으로 로그인</span>
-        </a>
-      </div>
-      <p><a href="">비밀번호를 잊으셨나요?</a></p>
-    </div>
 
-    <div class="join-wrap">
-      <span>계정이 없으신가요?</span><span>가입하기</span>
-    </div>
 
-    <p>앱을 다운로드하세요.</p>
-    
-    <div class="app-down">
-      <img src="./images/app-store.png" alt="App Store">
-      <img src="./images/gg-play.png" alt="Google Play">
-    </div>
 
-    <footer>
-      <span><a href="">Meta</a></span>
-      <span><a href="">소개</a></span>
-      <span><a href="">블로그</a></span>
-      <span><a href="">채용 정보</a></span>
-      <span><a href="">도움말</a></span>
-      <span><a href="">API</a></span>
-      <span><a href="">개인정보처리방침</a></span>
-      <span><a href="">약관</a></span>
-      <span><a href="">인기 계정</a></span>
-      <span><a href="">위치</a></span>
-      <span><a href="">Instagram Lite</a></span>
-      <span id="mode">DarkMode</span>
-      <div class="copyright">
-        <p>© 2023 Instagram from Meta</p>
+
       </div>
-    </footer>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
