🔥 class ling-item 삭제

--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="join-box">
+      <div class="join-box form-box">
         <p>
           계정이 없으신가요?
           <a href="">가입하기</a>
@@ -78,18 +78,18 @@
 
     <footer>
       <ul class="link-list">
-        <li class="link-item"><a href="">Meta</a></li>
-        <li class="link-item"><a href="">소개</a></li>
-        <li class="link-item"><a href="">블로그</a></li>
-        <li class="link-item"><a href="">채용 정보</a></li>
-        <li class="link-item"><a href="">도움말</a></li>
-        <li class="link-item"><a href="">API</a></li>
-        <li class="link-item"><a href="">개인정보처리방침</a></li>
-        <li class="link-item"><a href="">약관</a></li>
-        <li class="link-item"><a href="">인기 계정</a></li>
-        <li class="link-item"><a href="">위치</a></li>
-        <li class="link-item"><a href="">Instagram Lite</a></li>
-        <li class="link-item"><a id="darkmode-toggle" href="">Darkmode</a></li>
+        <li><a href="">Meta</a></li>
+        <li><a href="">소개</a></li>
+        <li><a href="">블로그</a></li>
+        <li><a href="">채용 정보</a></li>
+        <li><a href="">도움말</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">개인정보처리방침</a></li>
+        <li><a href="">약관</a></li>
+        <li><a href="">인기 계정</a></li>
+        <li><a href="">위치</a></li>
+        <li><a href="">Instagram Lite</a></li>
+        <li><a id="darkmode-toggle" href="">Darkmode</a></li>
       </ul>
       <p class="copyright">© 2023 Instagram from Meta</p>
     </footer>
