--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="btn-group">
-            <button class="btn-login" type="button">로그인</button>
+            <button class="btn-login" type="button" disabled>로그인</button>
           </div>
           <div class="or-box">
             <div></div>
